--- a/src/Pages/Patient.html
+++ b/src/Pages/Patient.html
@@ -94,7 +94,7 @@
   <div class="Heading">
     <h2>Medical Supply Request Form</h2>
   </div>
-  <form action="#" method="POST">
+  <form action=# method="POST">
     <div>
       <label for="name">Name:</label>
       <input type="text" id="name" name="name" required>
