Added stying to the page

--- a/src/Pages/JoinOurNetwork.html
+++ b/src/Pages/JoinOurNetwork.html
@@ -63,7 +63,7 @@ input[type="submit"]:hover {
 <body>
   <h1>Join Blood Network</h1>
   
-  <form action="submit.php" method="POST">
+  <form action="#" method="POST">
     <label for="name">Name of the Society:</label>
     <input type="text" id="name" name="name" required><br><br>
     
